# JobBoardReportEmailer

./: .env  .env.example  .gitignore  README.md  com.jobemailer.weekly.plist  config.py  emailer.py  main.py  pyproject.toml  requirements.txt  scraper.py  sent_jobs.json
docs/: about.md
